# Minneapolis-Aid-Map

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vercel.json
food-app/: index.html  package-lock.json  package.json  vite.config.ts
food-app/src/: App.tsx
food-app/src/assets/images/: happy-people-image.avif
food-app/src/components/: FoodGroups.tsx  Footer.tsx  MapView.tsx  MinneapolisMap.tsx  TopNav.tsx  foodgroups.css  topnav.css
food-app/src/data/: BackupRestaurants.json
food-app/src/pages/: ClaimFoodDrop.tsx  ContactUs.tsx  CreateFoodDrop.tsx  DeleteFoodDrop.tsx  FoodDrops.tsx  FoodShelters.tsx  Home.css  Home.tsx  RestaurantMap.tsx  restaurant.css
food-app/src/styles/pageStyles/: Home.css  createpage.css
src/: App.css  App.jsx  events.rs  food_bank.rs  gcloud.rs  helper_funcs.rs  main.jsx  main.rs  restaurants.rs  storage.rs
src/components/: MapView.jsx  NavBar.jsx
