[package]
name = "minnehack-2025"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
google-cloud-auth = "0.17.2"
reqwest = "0.12.12"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.138"
google-cloud-storage = "0.24.0"
dotenv = "0.15.0"
actix-cors = "0.6"
serde = { version = "1.0.217", features = ["serde_derive"] }
uuid = { version = "1.13.1", features = ["v4"] }
qrcode = "0.14.1"
image = "0.25.5"
